Correciones y nuevos elementos home

--- a/Salvamento/index.html
+++ b/Salvamento/index.html
@@ -1,86 +1,102 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>SALVAR - SALVAMENTO Y SOCORRISMO</title>
-        <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SALVAR - SALVAMENTO Y SOCORRISMO</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <script src="/JS/script.js"></script>
+    <script src="/JS/slider.js"></script>
+</head>
+<body>
 
-        <div class="banner">
+    <div class="banner">
 
-            <video autoplay loop muted>
-                <source src="./Imagenes/video.mp4" type="video/mp4">
-            </video>
+        <video autoplay loop muted>
+            <source src="./Imagenes/video.mp4" type="video/mp4">
+        </video>
 
-            <div class="overlay"></div>
+        <div class="overlay"></div>
 
-            <div class="navbar">
-                <input type="checkbox" id="check">
-                <label for="check" class="checkbtn">
-                    <i class="fas fa-bars"></i>
-                </label>
-                <a href="#" class="enlace">
-                    <img src="./Imagenes/logo.png" alt="logo" class="logo">
-                </a>
-                <ul class="menu">
-                    <li>
-                        <a href="#">ENTIDADE+</a>
-                        <ul>
-                            <li><a href="#">Áreas</a></li>
-                            <li><a href="./Pantallas/Preescripcion/Preescripcion.html">Preinscripción Club</a></li>
-                            <li><a href="#">Ornanigrama Deportivo</a></li>
-                            <li><a href="#">Prensa</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">SALVAMENTO+</a>
-                        <ul>
-                            <li><a href="./Pantallas/Eventos/eventos.html">Eventos</a></li>
-                            <li><a href="#">Deportivo</a></li>
-                            <li><a href="#">Profesional</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">ESCOLA+</a>
-                        <ul>
-                            <li><a href="#">Escola de Salvamento</a></li>
-                            <li><a href="./Pantallas/Inscripcion/Inscripcion.html">Natación Adaptada</a></li>
-                        </ul>
-                    </li>
-                            <li><a href="./Pantallas/Galeria/galeria.html">GALERIA</a></li>
-                            <li><a href="./Pantallas/Contacto/Contacto.html">CONTACTO</a></li>
-                </ul>
+        <div class="navbar">
+            <a href="#" class="enlace">
+                <img src="./Imagenes/logo.png" alt="logo" class="logo">
+            </a>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars"></i>
+            </label>
+            <ul class="menu">
+                <li>
+                    <a href="#">ENTIDADE+</a>
+                    <ul>
+                        <li><a href="#">Áreas</a></li>
+                        <li><a href="./Pantallas/Preescripcion/Preescripcion.html">Preinscripción Club</a></li>
+                        <li><a href="#">Ornanigrama Deportivo</a></li>
+                        <li><a href="#">Prensa</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">SALVAMENTO+</a>
+                    <ul>
+                        <li><a href="./Pantallas/Eventos/eventos.html">Eventos</a></li>
+                        <li><a href="#">Deportivo</a></li>
+                        <li><a href="#">Profesional</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">ESCOLA+</a>
+                    <ul>
+                        <li><a href="#">Escola de Salvamento</a></li>
+                        <li><a href="./Pantallas/Inscripcion/Inscripcion.html">Natación Adaptada</a></li>
+                    </ul>
+                </li>
+                <li><a href="./Pantallas/Galeria/galeria.html">GALERIA</a></li>
+                <li><a href="./Pantallas/Contacto/Contacto.html">CONTACTO</a></li>
+            </ul>
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/salvamentoarteixo/"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
-
-            <div class="medio">
-                <div class="titulo">
-                    <h2>SALVAMENTO E SOCORRISMO ARTEIXO</h2>
-                    <h5>SITIO WEB OFICIAL</h5>
-                </div>
-                <div class="botones">
-                    <a href="#">RESULTADOS</a>
-                    <a href="./Pantallas/Preescripcion/Preescripcion.html">PRESCRIPCIÓN</a>
-                </div>
-            </div>
-
         </div>
 
-        <section class="container">
-            <div class="slider-wrapper">
-                <div class="slider">
-                        <img id="slide-1" src="./Imagenes/SAbiertas.jpg" alt="Socorrismo Aguas Abiertas" />
-                        <img id="slide-2" src="./Imagenes/SPiscina.png" alt="Socorrismo Piscinas" />
-                </div>
-                <div class="overlay"></div>
-                <div class="slider-nav">
-                    <a href="#slide-1"></a>
-                    <a href="#slide-2"></a>
+        <div class="medio">
+            <div class="titulo">
+                <h2>SALVAMENTO E SOCORRISMO ARTEIXO</h2>
+                <h5>SITIO WEB OFICIAL</h5>
+            </div>
+            <div class="botones">
+                <a href="#">RESULTADOS</a>
+                <a href="./Pantallas/Preescripcion/Preescripcion.html">PREINSCRIPCIÓN</a>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="slider-container">
+        <div class="slider">
+            <div class="slide">
+                <img src="./Imagenes/SAbiertas.jpg" alt="Socorrismo Aguas Abiertas">
+                <div class="slide-content">
+                    <h1>Certificacións profesionais de socorrismo</h1>
+                    <a href="https://example.com" class="btn">Más información</a>
                 </div>
             </div>
-        </section>
+            <div class="slide">
+                <img src="./Imagenes/SPiscina.png" alt="Socorrismo Piscinas">
+                <div class="slide-content">
+                    <h1>Certificacións profesionais de socorrismo</h1>
+                    <a href="https://example.com" class="btn">Más información</a>
+                </div>
+            </div>
+        </div>
+        <div class="slider-nav">
+            <button class="nav-btn prev">⟨</button>
+            <button class="nav-btn next">⟩</button>
+        </div>
+    </div>
 
         <section class="XuntaDirectiva">
             <div class="Xunta">
@@ -164,7 +180,6 @@
                 </div>
             </div>
             <h3>Entidades colaboradoras</h3>
-            <div class="barra"></div>
             <div class="entidades">
                 <div class="arteixo">
                     <img src="/Imagenes/Proyecto nuevo (2).svg" alt="logo" class="logofooter">
