--- a/Salvamento/Pantallas/Areas/areas.html
+++ b/Salvamento/Pantallas/Areas/areas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SALVAR - SALVAMENTO Y SOCORRISMO</title>
-    <link rel="stylesheet" href="./galeria.css">
+    <link rel="stylesheet" href="./areas.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
 <body>
@@ -49,44 +49,45 @@
     </nav>
 
     <section class="titulo">
-        <h2>Galería</h2>
+        <h2>Áreas do club</h2>
     </section>
 
-    <section class="galeria">
-        <h3>Fotos</h3>
-        <div class="galeriaOrden">
-            <div class="columna1">
-                <img src="./Imagenes/foto.jpg" alt="foto1">
-            </div>
-            <div class="columna2">
-                <img src="./Imagenes/foto2.jpg" alt="foto2">
-            </div>
-            <div class="columna3">
-                <img src="./Imagenes/foto3.jpg" alt="foto3">
-            </div>
-            <div class="columna4">
-                <img src="./Imagenes/foto4.jpg" alt="foto4">
-            </div>
-            <div class="columna5">
-                <img src="./Imagenes/foto5.jpg" alt="foto5">
-            </div>
-            <div class="columna6">
-                <img src="./Imagenes/foto6.jpg" alt="foto6">
+    <section class="areas">
+        <div class="area">
+            <img src="/Imagenes/escola-salv-2018.jpg" alt="Imagen 1">
+            <div class="text-content">
+                <h4>ESCOLA DE SALVAMENTO</h4>
+                <h2>A escola de salvamento acolle a nenos e nenas de entre 3 a 7 e 8 anos, nos niveis de iniciación</h2>
+                <p>Nesta área os rapaces se acostuman ó medio acuático e inician movementos básicos; aprendizaxe, xa cun nivel de esixencia maior, onde aprenden patada e brazada en todos os estilos e os primeiros exercicios na coordinación da respiración; perfeccionamento para establecer as técnicas de nado final a todos os estilos, mariposa, espalda, braza, crol e arrastre; iniciación a competición, con exercicios técnicos basados en probas deportivas como probas de aletas, floppy, maniquí ou obstáculos e perfeccionameto do nado.</p>
             </div>
         </div>
-        <h3>Videos</h3>
-        <div class="videoOrden">
-            <div class="columna7">
-                <video src="/Imagenes/video.mp4" type="video/mp4" alt="video" autoplay controls>
+        <div class="area">
+            <img src="/Imagenes/escola-salv-2018.jpg" alt="Imagen 1">
+            <div class="text-content">
+                <h4>ESCOLA DE SALVAMENTO</h4>
+                <h2>A escola de salvamento acolle a nenos e nenas de entre 3 a 7 e 8 anos, nos niveis de iniciación</h2>
+                <p>Nesta área os rapaces se acostuman ó medio acuático e inician movementos básicos; aprendizaxe, xa cun nivel de esixencia maior, onde aprenden patada e brazada en todos os estilos e os primeiros exercicios na coordinación da respiración; perfeccionamento para establecer as técnicas de nado final a todos os estilos, mariposa, espalda, braza, crol e arrastre; iniciación a competición, con exercicios técnicos basados en probas deportivas como probas de aletas, floppy, maniquí ou obstáculos e perfeccionameto do nado.</p>
             </div>
-            <div class="columna8">
-                <video src="./Imagenes/video2.mp4" type="video/mp4" alt="video1" autoplay controls>
+        </div>
+        <div class="area">
+            <img src="/Imagenes/escola-salv-2018.jpg" alt="Imagen 1">
+            <div class="text-content">
+                <h4>ESCOLA DE SALVAMENTO</h4>
+                <h2>A escola de salvamento acolle a nenos e nenas de entre 3 a 7 e 8 anos, nos niveis de iniciación</h2>
+                <p>Nesta área os rapaces se acostuman ó medio acuático e inician movementos básicos; aprendizaxe, xa cun nivel de esixencia maior, onde aprenden patada e brazada en todos os estilos e os primeiros exercicios na coordinación da respiración; perfeccionamento para establecer as técnicas de nado final a todos os estilos, mariposa, espalda, braza, crol e arrastre; iniciación a competición, con exercicios técnicos basados en probas deportivas como probas de aletas, floppy, maniquí ou obstáculos e perfeccionameto do nado.</p>
             </div>
-            <div class="columna9">
-                <video src="./Imagenes/video3.mp4" type="video/mp4" alt="video1" autoplay controls>
+        </div>
+        <div class="area">
+            <img src="/Imagenes/escola-salv-2018.jpg" alt="Imagen 1">
+            <div class="text-content">
+                <h4>ESCOLA DE SALVAMENTO</h4>
+                <h2>A escola de salvamento acolle a nenos e nenas de entre 3 a 7 e 8 anos, nos niveis de iniciación</h2>
+                <p>Nesta área os rapaces se acostuman ó medio acuático e inician movementos básicos; aprendizaxe, xa cun nivel de esixencia maior, onde aprenden patada e brazada en todos os estilos e os primeiros exercicios na coordinación da respiración; perfeccionamento para establecer as técnicas de nado final a todos os estilos, mariposa, espalda, braza, crol e arrastre; iniciación a competición, con exercicios técnicos basados en probas deportivas como probas de aletas, floppy, maniquí ou obstáculos e perfeccionameto do nado.</p>
             </div>
         </div>
     </section>
+    
+
 
 
     <footer>
@@ -148,6 +149,5 @@
             </div>
         </div>
     </footer>
-    
 </body>
 </html>
