--- a/Salvamento/Pantallas/Prensa/prensa.html
+++ b/Salvamento/Pantallas/Prensa/prensa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SALVAR - SALVAMENTO Y SOCORRISMO</title>
-    <link rel="stylesheet" href="./Preescripcion.css">
+    <link rel="stylesheet" href="./prensa.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
 <body>
@@ -49,35 +49,31 @@
     </nav>
 
     <section class="titulo">
-        <h2>Prescripción</h2>
+        <h2>Prensa</h2>
     </section>
 
-    <section class="texto">
-        <div class="columna1">
-            <div class="fondo">
-                <img src="/Imagenes/logo.png" alt="logogrande">
+    <section class="noticias">
+        <div class="container">
+            <div class="titulo-seccion">
+                <h2>Dos deportistas españoles de alto nivel en el Sysca</h2>
+                <p>Se trata de Brais Pensado Alberti y Gabriel Rodríguez Colferai</p>
             </div>
-        </div>
-        <div class="columna2">
-            <h3>Folla de inscrición</h3>
-            <div class="botonFormulario">
-                <img src="./Imagenes/pdf.svg" alt="iconoPDF">
-                <a href="#">Formulario de preinscrición</a>
+            <div class="contenido">
+                <div class="imagenPrensa">
+                    <img src="/Imagenes/historia.jpg" alt="Dos deportistas españoles de alto nivel">
+                </div>
+                <ul class="noticias-lista">
+                    <li><a href="#">14/07/2020: Dos deportistas españoles de alto nivel en el Sysca</a></li>
+                    <li><a href="#">07/07/2020: Sysca retoma la preparación con cuatro meses después</a></li>
+                    <li><a href="#">29/02/2020: El Sysca continúa cambiando de directiva</a></li>
+                    <li><a href="#">21/02/2020: El club Sysca, el mejor gallego en alevín, infantil y cadete</a></li>
+                    <!-- Agrega más enlaces según sea necesario -->
+                </ul>
             </div>
-            <br>
-            <h3>Folla de baixa</h3>
-            <div class="botonBaixa">
-                <img src="./Imagenes/pdf.svg" alt="iconoPDF">
-                <a href="#">Descargar</a>
-            </div>
-            <br>
-            <p>Entregar na piscina de Arteixo, a calquera dos monitores do 
-                Club SALVAR
-            </p>
         </div>
     </section>
 
-
+    
     <footer>
         <div class="footergroup">
             <div class="imagen">
