--- a/Salvamento/index.html
+++ b/Salvamento/index.html
@@ -31,24 +31,24 @@
                 <li>
                     <a href="#">ENTIDADE+</a>
                     <ul>
-                        <li><a href="#">Áreas</a></li>
+                        <li><a href="./Pantallas/Areas/areas.html">Áreas</a></li>
                         <li><a href="./Pantallas/Preescripcion/Preescripcion.html">Preinscripción Club</a></li>
-                        <li><a href="#">Ornanigrama Deportivo</a></li>
-                        <li><a href="#">Prensa</a></li>
+                        <li><a href="./Pantallas/Ornanigrama/Ornanigrama.html">Ornanigrama Deportivo</a></li>
+                        <li><a href="./Pantallas/Historia/historia.html">Historia</a></li>
+                        <li><a href="./Pantallas/Prensa/prensa.html">Prensa</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="#">SALVAMENTO+</a>
                     <ul>
                         <li><a href="./Pantallas/Eventos/eventos.html">Eventos</a></li>
-                        <li><a href="#">Deportivo</a></li>
-                        <li><a href="#">Profesional</a></li>
+                        <li><a href="/Pantallas/Practicas/Practicas.html">Profesional</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="#">ESCOLA+</a>
                     <ul>
-                        <li><a href="#">Escola de Salvamento</a></li>
+                        <li><a href="./Pantallas/Inscripcion Escola/InscripcionEscola.html">Escola de Salvamento</a></li>
                         <li><a href="./Pantallas/Inscripcion/Inscripcion.html">Natación Adaptada</a></li>
                     </ul>
                 </li>
@@ -81,14 +81,14 @@
                 <img src="./Imagenes/SAbiertas.jpg" alt="Socorrismo Aguas Abiertas">
                 <div class="slide-content">
                     <h1>Certificacións profesionais de socorrismo</h1>
-                    <a href="https://example.com" class="btn">Más información</a>
+                    <a href="https://example.com" class="btn">Curso en espacios acuáticos naturais</a>
                 </div>
             </div>
             <div class="slide">
                 <img src="./Imagenes/SPiscina.png" alt="Socorrismo Piscinas">
                 <div class="slide-content">
                     <h1>Certificacións profesionais de socorrismo</h1>
-                    <a href="https://example.com" class="btn">Más información</a>
+                    <a href="https://example.com" class="btn">Curso en instalacións acuáticas</a>
                 </div>
             </div>
         </div>
