--- a/Salvamento/Pantallas/Historia/historia.html
+++ b/Salvamento/Pantallas/Historia/historia.html
@@ -4,49 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SALVAR - SALVAMENTO Y SOCORRISMO</title>
-    <link rel="stylesheet" href="./historia.css">
+    <link rel="stylesheet" href="/CSS/historia.css">
+    <link rel="stylesheet" href="/CSS/headerSubhome.css">
+    <link rel="stylesheet" href="/CSS/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
 <body>
 
-    <nav>
+    <div class="navbar">
+        <a href="#" class="enlace">
+            <img src="/Imagenes/logo.png" alt="logo" class="logo">
+        </a>
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
             <i class="fas fa-bars"></i>
         </label>
-        <a href="/index.html" class="enlace">
-            <img src="/Imagenes/logo.png" alt="logo" class="logo">
-        </a>
         <ul class="menu">
             <li>
                 <a href="#">ENTIDADE+</a>
                 <ul>
-                    <li><a href="#">Áreas</a></li>
-                    <li><a href="#">Historia</a></li>
-                    <li><a href="../Preescripcion/Preescripcion.html">Preinscripción Club</a></li>
-                    <li><a href="#">Ornanigrama Deportivo</a></li>
-                    <li><a href="#">Prensa</a></li>
+                    <li><a href="./Pantallas/Areas/areas.html">Áreas</a></li>
+                    <li><a href="./Pantallas/Preescripcion/Preescripcion.html">Preinscripción Club</a></li>
+                    <li><a href="./Pantallas/Ornanigrama/Ornanigrama.html">Ornanigrama Deportivo</a></li>
+                    <li><a href="./Pantallas/Historia/historia.html">Historia</a></li>
+                    <li><a href="./Pantallas/Prensa/prensa.html">Prensa</a></li>
                 </ul>
             </li>
             <li>
                 <a href="#">SALVAMENTO+</a>
                 <ul>
-                    <li><a href="../Eventos/eventos.html">Eventos</a></li>
-                    <li><a href="#">Deportivo</a></li>
-                    <li><a href="#">Profesional</a></li>
+                    <li><a href="./Pantallas/Eventos/eventos.html">Eventos</a></li>
+                    <li><a href="/Pantallas/Practicas/Practicas.html">Profesional</a></li>
                 </ul>
             </li>
             <li>
                 <a href="#">ESCOLA+</a>
                 <ul>
-                    <li><a href="#">Escola de Salvamento</a></li>
-                    <li><a href="../Inscripcion/Inscripcion.html">Natación Adaptada</a></li>
+                    <li><a href="./Pantallas/Inscripcion Escola/InscripcionEscola.html">Escola de Salvamento</a></li>
+                    <li><a href="./Pantallas/Inscripcion/Inscripcion.html">Natación Adaptada</a></li>
                 </ul>
             </li>
-                    <li><a href="../Galeria/galeria.html">GALERIA</a></li>
-                    <li><a href="../Contacto/Contacto.html">CONTACTO</a></li>
+            <li><a href="./Pantallas/Galeria/galeria.html">GALERIA</a></li>
+            <li><a href="./Pantallas/Contacto/Contacto.html">CONTACTO</a></li>
         </ul>
-    </nav>
+        <div class="social-icons">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/salvamentoarteixo/"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+        </div>
+    </div>
 
     <section class="titulo">
         <h2>Historia</h2>
