--- a/Salvamento/index.html
+++ b/Salvamento/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SALVAR - SALVAMENTO Y SOCORRISMO</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/CSS/header.css">
+    <link rel="stylesheet" href="/CSS/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-    <script src="/JS/script.js"></script>
+    <!-- <script src="/JS/script.js"></script> -->
     <script src="/JS/slider.js"></script>
 </head>
 <body>
