--- a/Salvamento/Pantallas/Calendario/calendario.html
+++ b/Salvamento/Pantallas/Calendario/calendario.html
@@ -4,31 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SALVAR - SALVAMENTO Y SOCORRISMO</title>
-    <link rel="stylesheet" href="/CSS/horarios.css">
+    <link rel="stylesheet" href="/CSS/areas.css">
     <link rel="stylesheet" href="/CSS/headerSubhome.css">
     <link rel="stylesheet" href="/CSS/footer.css">
+    <link rel="stylesheet" href="/CSS/calendario.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css' rel='stylesheet' />
     <script src="/JS/loadHTML.js"></script>
     <script src="/JS/cookies.js"></script>
+    <script src="/JS/calendario.js"></script>
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js'></script>
 </head>
 <body>
 
     <div id="navbar"></div>
-    
-    <section class="titulo">
-        <h2>Horarios de adestramento</h2>
-    </section>
 
-    <section class="texto">
-        <div class="columna1">
-            <img src="/Imagenes/pdf.svg" alt="iconoPDF" class="iconoPDF">
-            <h3>Horarios de adestramento 2022-2023</h3>
-        </div>
-        <embed src="Documento/grupos-horarios-22-23-af.pdf" type="application/pdf" width="1140px" height="820px">
-    </section>
-
+    <div id="calendar"></div>
 
     <div id="footer"></div>
-
+    
 </body>
 </html>
