--- a/Salvamento/Pantallas/Inscripcion/Inscripcion.html
+++ b/Salvamento/Pantallas/Inscripcion/Inscripcion.html
@@ -8,51 +8,12 @@
     <link rel="stylesheet" href="/CSS/headerSubhome.css">
     <link rel="stylesheet" href="/CSS/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <script src="/JS/loadHTML.js"></script>
+    <script src="/JS/cookies.js"></script>
 </head>
 <body>
 
-    <div class="navbar">
-        <a href="#" class="enlace">
-            <img src="/Imagenes/logo.png" alt="logo" class="logo">
-        </a>
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbtn">
-            <i class="fas fa-bars"></i>
-        </label>
-        <ul class="menu">
-            <li>
-                <a href="#">ENTIDADE+</a>
-                <ul>
-                    <li><a href="./Pantallas/Areas/areas.html">Áreas</a></li>
-                    <li><a href="./Pantallas/Preescripcion/Preescripcion.html">Preinscripción Club</a></li>
-                    <li><a href="./Pantallas/Ornanigrama/Ornanigrama.html">Ornanigrama Deportivo</a></li>
-                    <li><a href="./Pantallas/Historia/historia.html">Historia</a></li>
-                    <li><a href="./Pantallas/Prensa/prensa.html">Prensa</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#">SALVAMENTO+</a>
-                <ul>
-                    <li><a href="./Pantallas/Eventos/eventos.html">Eventos</a></li>
-                    <li><a href="/Pantallas/Practicas/Practicas.html">Profesional</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#">ESCOLA+</a>
-                <ul>
-                    <li><a href="./Pantallas/Inscripcion Escola/InscripcionEscola.html">Escola de Salvamento</a></li>
-                    <li><a href="./Pantallas/Inscripcion/Inscripcion.html">Natación Adaptada</a></li>
-                </ul>
-            </li>
-            <li><a href="./Pantallas/Galeria/galeria.html">GALERIA</a></li>
-            <li><a href="./Pantallas/Contacto/Contacto.html">CONTACTO</a></li>
-        </ul>
-        <div class="social-icons">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/salvamentoarteixo/"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-        </div>
-    </div>
+    <div id="navbar"></div>
 
     <section class="titulo">
         <h2>Inscripcion Natación Adaptada</h2>
@@ -67,12 +28,10 @@
                 Abarca diferentes niveis: iniciación, perfeccionamento 
                 e outro de exercicios específicos adaptados á diversidade funcional.
             </p>
-            <br/>
             <p>
                 O horario de estas actividades é martes e xoves de 15:45-16:30H 
                 e os sábados de 12:45-13:45H na piscina Municipal de Arteixo.
             </p>
-            <br/>
             <p>  
                 Para inscribirse en esta sección de natación adaptada hai
                 que seguir o seguinte proceso:
@@ -82,25 +41,20 @@
             <p class="definicion">
                 1. PETICIÓN DE ENTRADA NA SECCIÓN DE NATACIÓN ADAPTADA
             </p>
-            <br/>
             <p>
                 Petición de ingreso na sección de natación adaptada a través de 
-                correo electrónico o clube (salvamentoarteixo@hotmail.com)
-                ,indicando o tipo de diversidade funcional da persoa interesada.
+                correo electrónico o clube (salvamentoarteixo@hotmail.com),
+                indicando o tipo de diversidade funcional da persoa interesada.
             </p>
-            <br/>
             <p class="definicion">
                 2. RECEPCIÓN DA PETICIÓN
             </p>
-            <br/>
             <p> 
                 Recepción desa petición por parte do clube e valoración do caso cos monitores.
             </p>
-            <br/>
             <p class="definicion">  
                 3. CHAMADA PARA INCORPORACIÓN
             </p>
-            <br/>
             <p> 
                 Chamada á persoa interesada para dar unha solución a súa petición.
             </p>
@@ -108,64 +62,7 @@
     </section>
 
 
-    <footer>
-        <div class="footergroup">
-            <div class="imagen">
-                <img src="/Imagenes/logo.png" alt="logo" class="logofooter">
-            </div>
-            <div class="ubicacion">
-                <h4>Onde estamos</h4>
-                <br/>
-                <p>Avenida Arsenio Iglesias s/n</p>
-                <p>Piscina Municipal de Arteixo</p>
-                <br/>
-                <p>Praia de Sabón</p>
-            </div>
-            <div class="contacto">
-                <h4>Contacta con nos</h4>
-                <br/>
-                <p>691105357</p>
-                <br/>
-                <p>salvamentoarteixo@hotmail.com</p>
-            </div>
-        </div>
-        <h3>Entidades colaboradoras</h3>
-        <div class="barra"></div>
-        <div class="entidades">
-            <div class="arteixo">
-                <img src="/Imagenes/Proyecto nuevo (2).svg" alt="logo" class="logofooter">
-            </div>
-            <div class="deporteGalego">
-                <img src="/Imagenes/sysca-entidades-colaboradoras-logo-04-removebg-preview.png" alt="logo" class="logofooter">                
-            </div>
-            <div class="deputacion">
-                <img src="/Imagenes/sysca-entidades-colaboradoras-logo-03-removebg-preview.png" alt="logo" class="logofooter">                
-            </div>
-            <div class="legea">
-                <img src="/Imagenes/Proyecto nuevo (1).svg" alt="logo" class="logofooter">                
-            </div>
-        </div>
-        <div class="igualdad">
-            <div class="non">
-                <img src="/Imagenes/non-logo-1 (1).svg" alt="logo" class="logofooter">                
-            </div>
-            <div class="xenero">
-                <img src="/Imagenes/igualdade2 (1).png" alt="logo" class="logofooter">                
-            </div>
-        </div>
-        <div class="cookies">
-            <div class="aviso">
-                <p>© 2024 SALVA – Salvamento e Socorrismo Arteixo – <a href="/aviso-legal/">Aviso Legal</a> – <a href="/politica-cookies/">Política de cookies</a></p>
-            </div>
-        </div>
-        <div class="imgfianl">
-            <div class="xunta">
-                <img src="/Imagenes/xunta-hor (1).svg" alt="logo" class="logofooter">                
-            </div>
-            <div class="coruña">
-                <img src="/Imagenes/dep-cor-hor (1).svg" alt="logo" class="logofooter">                
-            </div>
-        </div>
-    </footer>
+    <div id="footer"></div>
+
 </body>
 </html>
